--- a/#source/scss/portfolio.scss
+++ b/#source/scss/portfolio.scss
@@ -239,6 +239,10 @@
 		display: flex;
 		justify-content: center;
 		flex-wrap: wrap;
+		&--blog {
+			justify-content: flex-start;
+			margin: 69px 0px 0px 0px;
+		}
 	}
 	&__pagination-link {
 		font-size: 16px;
