--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -80,6 +80,7 @@ body {
 @import "services";
 @import "footer";
 @import "portfolio";
+@import "blog";
 @import "contacts";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=======================================================
 
